--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@
 .env.test.local
 .env.production.local
 
+.eslintcache
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/cypress/integration/examples
+/cypress/support/*
+/cypress/videos/*
+/cypress/screenshots/*
+/cypress/fixtures/*
