--- a/package.json
+++ b/package.json
@@ -24,9 +24,7 @@
     "test": "react-scripts test",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +45,6 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^6.1.0",
-    "gh-pages": "^3.1.0"
+    "cypress": "^6.1.0"
   }
 }
